Added services to upload images as a zip file
